add compiled v back

--- a/retrieve_data_solution.ipynb
+++ b/retrieve_data_solution.ipynb
@@ -154,7 +154,6 @@
    "outputs": [],
    "source": [
     "# Create a function called extract_activityID_from_dict that takes a dict as input such as in linkedEvents\n",
-    "# and verify below that it works as expected using one row from linkedEvents as an example\n",
     "# Be sure to use a try and except block to handle errors\n",
     "# Log the error or print it for debugging\n",
     "def extract_activityID_from_dict(input_dict):\n",
@@ -165,7 +164,8 @@
     "        # Log the error or print it for debugging\n",
     "        print(f\"Error processing input dictionary: {input_dict}. Error: {e}\")\n",
     "        return None\n",
-    "    \n",
+    "\n",
+    "# Verify that it works as expected using one row from linkedEvents as an example    \n",
     "extract_activityID_from_dict(cme_df_ex.loc[0,'linkedEvents'])"
    ]
   },
@@ -177,11 +177,7 @@
    "source": [
     "# Apply this function to each row in the 'linkedEvents' column (you can use apply() and a lambda function)\n",
     "# and create a new column called 'GST_ActivityID' using loc indexer:\n",
-    "#extract_activityID_from_dict(df_for_loop.loc[0,'linkedEvents'])\n",
-    "\n",
-    "# and create a new column called 'CME_ActivityID':\n",
-    "cme_df_ex['GST_ActivityID'] = cme_df_ex['linkedEvents'].apply(lambda x: extract_activityID_from_dict(x))\n",
-    "cme_df_ex"
+    "cme_df_ex['GST_ActivityID'] = cme_df_ex['linkedEvents'].apply(lambda x: extract_activityID_from_dict(x))"
    ]
   },
   {
@@ -363,8 +359,7 @@
     "        return None\n",
     "        \n",
     "# and create a new column called 'CME_ActivityID':\n",
-    "gst_df['CME_ActivityID'] = gst_df['linkedEvents'].apply(lambda x: extract_activityID_from_dict(x))\n",
-    "gst_df"
+    "gst_df['CME_ActivityID'] = gst_df['linkedEvents'].apply(lambda x: extract_activityID_from_dict(x))"
    ]
   },
   {
@@ -418,7 +413,7 @@
     "# We are only interested in GSTs related to CMEs so keep only rows where the CME_ActivityID column contains 'CME'\n",
     "# use the method 'contains()' from the str library.  \n",
     "gst_df = gst_df[gst_df['CME_ActivityID'].str.contains('CME')]\n",
-    "gst_df\n"
+    "gst_df"
    ]
   },
   {
@@ -434,7 +429,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HELP ON THIS\n",
     "# Now merge both datasets using 'gstID' and 'CME_ActivityID' for gst and 'GST_ActivityID' and 'cmeID' for cme. Use the 'left_on' and 'right_on' specifiers.\n",
     "merged_df = pd.merge(cme_df_ex,gst_df,left_on=['GST_ActivityID','cmeID'],right_on=['gstID','CME_ActivityID'])\n",
     "display(merged_df)"
